--- a/_config.yml
+++ b/_config.yml
@@ -15,14 +15,15 @@
 # in the templates via {{ site.myvariable }}.
 theme: jekyll-theme-so-simple
 # remote_theme: mmistakes/so-simple-theme
-skin: "/assets/css/skins/default.css"
+skin: "/assets/css/skins/dark.css"
 locale: en-US
-title: "Tian's Blog - Phi Space"
+title: "Phi Space"
 description: "A man is what he does, not what he says."
 # baseurl: # the subpath of your site, e.g. "/blog"
 # url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 url: https://tian3rd.github.io
-logo: # path of site logo, e.g. "/images/logo.png"
+# logo: # path of site logo, e.g. "/images/logo.png"
+logo: "/images/phi-logo.jpg"
 date_format: "%B %-d, %Y"
 # read_time: # reading time estimates, e.g. true
 read_time: true
@@ -102,17 +103,21 @@ defaults:
 collections:
   "readings":
     output: true
+  "life":
+    output: true
 
 # Site Author
 author:
-  name: Tian
-  picture:
-  email:
-  twitter: "@Phi_W5"
+  name: Phillip Wu
+  picture: "/images/phi-avatar.jpg"
+  email: "tianwu@outlook.com"
   links:
     - title: Twitter
       url: https://www.twitter.com/phi_W5
       icon: fab fa-twitter-square
+    - title: GitHub
+      url: https://github.com/tian3rd
+      icon: fab fa-github-square
 
 # Footer Links
 footer_links:
