--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,5 +14,7 @@
   url: /search/
 # - title: External Page
 #   url: https://the-page.com/you-want-to-link-to.html
-- title: readings
-  url: /readings/
+# - title: Readings
+#   url: /readings/
+# - title: Pieces
+#   url: /pieces/
