--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ theme: jekyll-theme-so-simple
 skin: "/assets/css/skins/dark.css"
 locale: en-US
 title: "Phi Space"
-description: "A man is what he does, not what he says."
+description: "and beyond."
 # baseurl: # the subpath of your site, e.g. "/blog"
 # url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 url: https://tian3rd.github.io
